--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@sendgrid/mail": "^7.7.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "eslint": "8.31.0",
