--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-html-parser": "^2.0.2",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.5",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "tailwindcss": "^3.2.4"
