--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@sendgrid/mail": "^7.7.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "flowbite": "^1.6.1",
     "moment": "^2.29.4",
     "next": "13.1.1",
+    "nodemailer": "^6.9.1",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
