--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/translate": "^7.2.0",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
@@ -20,6 +21,7 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "flowbite": "^1.6.1",
+    "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "next": "13.1.1",
     "nodemailer": "^6.9.1",
@@ -27,6 +29,7 @@
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-translate": "^1.0.12",
     "react-html-parser": "^2.0.2",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.5",
