--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2"
   }
 }
